add google analytics

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,7 +4,9 @@ project:
 website:
   title: "Zhaowen Guo"
   favicon: "headshot_guo.jpg"
-    
+  google-analytics: 
+    tracking-id: "G-J1PPVYDT7J"
+    anonymize-ip: true
   search: 
     location: navbar
     type: overlay
