--- a/_quarto.yml
+++ b/_quarto.yml
@@ -50,8 +50,8 @@ format:
   html:
     theme: 
       - mystyle.scss
-    mainfont: Merriweather
-    fontsize: 18px
+    mainfont: Roboto
+    fontsize: 16px
     linestretch: 1.7
     page-layout: article
     citations-hover: true
